# pager.io

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  idf_component.yml  lcd_panel.c  lcd_panel.h  main.c  my-notifications.c  notifications.c  notifications.h
main/drivers/: lcd_panel.c  lcd_panel.h
main/gui/: component.c  component.h  renderer.c  renderer.h
main/protocol/: ble.c  ble.h
scripts/: client.py
